--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ analytics:
 # Site Author
 author:
   name             : "Jinsu Park"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/img/profile.jpg"
   bio              : "꼬꼬마 베이지안 분석가"
   location         : "Somewhere"
   email            : "to23273287@gmail.com"
