--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,12 +3,12 @@ main:
   # - title: "Quick-Start Guide"
     # url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   - title: "About"
-    url: https://mmistakes.github.io/minimal-mistakes/about/
+    url: /about/
   - title: "Posts"
-    url: /year-archive/
-  - title: "Portfolio"
-    url: /year-archive/
-  # - title: "Sample Collections"
+    url: /posts/
+  # - title: "Portfolio"
+  #   url: /year-archive/
+  # # - title: "Sample Collections"
   #   url: /collection-archive/
   # - title: "Sitemap"
   #   url: /sitemap/
