--- a/_config.yml
+++ b/_config.yml
@@ -283,8 +283,10 @@ defaults:
 
 # _pages
   - scope:
-      path: ""
+      path: "_pages"
       type: pages
     values:
       layout: single
       author_profile: true
+
+      
