--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,8 +4,10 @@ main:
     # url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   - title: "About"
     url: /about/
-  - title: "Posts"
-    url: /posts/
+  - title: "tag"
+    url: /tags/
+  - title: "category"
+    url: /categories/
   # - title: "Portfolio"
   #   url: /year-archive/
   # # - title: "Sample Collections"
